--- a/title.tex
+++ b/title.tex
@@ -15,7 +15,7 @@
   {\color{darkgray}Informatique, Télécommunication et \'Electronique}
   \vspace{1cm}\\
   \textbf{\Large{}Thèse de doctorat de l'Université Sorbonne Université}
-  \vspace{1cm}\\
+  \vspace{.7cm}\\
   \large{}Spécialité : \textbf{\Large{}Ingénierie / Systèmes Informatiques}
   \vspace{1cm}\\
   Présentée par : \textbf{\Large{}\color{phdcol0}Hakan Metin}
@@ -27,7 +27,7 @@
   \textbf{Sujet de la thèse :}\\
   \textbf{\Large{}\color{phdcol0}Exploitation des symétries dynamiques pour
     la résolution des problèmes SAT}
-  \vspace{1cm}\\
+  \vspace{.5cm}\\
   Soutenue le : 18 décembre 2019
   \vspace{.2cm}\\
   Devant le jury composé de :
@@ -57,11 +57,12 @@
      -- (bordernw.center)
      -- cycle;
 \end{tikzpicture}
-\\
-\vfill
-\hspace*{-1.15cm}
-\includegraphics[keepaspectratio=true, width=.15\textwidth]
-                {img/logo-lip6.png}
 
+\hspace*{-1.15cm}
+\includegraphics[keepaspectratio=true, height=.1\textheight]
+                {img/logo-lip6.png}
+\hfill
+\includegraphics[keepaspectratio=true, height=.1\textheight]
+{img/cnrs}
 \restoregeometry
 \clearpage
