--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -69,3 +69,8 @@ align=center,fill=propa-grey]
 		\only<#1>{\pgfkeysalso{#2}} % \pgfkeysalso doesn't change the path
 }}
 
+\definecolor{hgreen}{RGB}{0,153,20}%{rgb}{0, 0.8, 0.2}
+\newcommand{\cred}[1]{{\color{red}#1}}
+\newcommand{\cgreen}[1]{{\color{hgreen}#1}}
+\newcommand{\cblue}[1]{{\color{blue!80}#1}}
+\newcommand{\cprop}[1]{{\color{orange}#1}}
