--- a/defense/main.tex
+++ b/defense/main.tex
@@ -16,15 +16,16 @@
 % \usepackage{algorithm}
 \usepackage{algpseudocode}
 
+
 \usepackage{tikz}
 \usetikzlibrary{calc, chains, decorations.pathmorphing}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{arrows,shapes,positioning}
 \usetikzlibrary{calc,decorations.markings}
-\usetikzlibrary{decorations.markings}
 \usetikzlibrary{decorations.text}
 \usetikzlibrary{patterns}
 \usetikzlibrary{arrows.meta}
+
 \usepackage{color, soul}
 
 \input{abbr}
@@ -45,16 +46,18 @@
 
 	\scriptsize
     \begin{tabular}{ll}
-  	    \textbf{Supervisors:} & \\
-    	\textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
-    	\vspace{1em}
-    	\textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
  	    \textbf{Jury Members:} & \\
-    	\textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Lorraine\\
+    	\textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Liège\\
     	\textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
     	\textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
     	\textsc{Emanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
     	\textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
+    	\vspace{1em}
+    	\textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
+    	
+ 	    \textbf{Supervisors:} & \\
+    	\textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
+
     	\textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
     \end{tabular}\\
  % \end{center}
@@ -325,6 +328,7 @@ $\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{\text{Clause with literals } x_1, x_
 	$\overbrace{\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{Clause}\land (\neg x_1 \lor \neg x_2) \land (x_2 \lor \neg x_4)}^\text{Formula (CNF)}$
 }% visible 3
 \end{overlayarea}
+Mettre set representation
 \end{frame}
 
 
@@ -409,51 +413,59 @@ $\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{\text{Clause with literals } x_1, x_
  \begin{columns}[t]
 	\begin{column}[T]{.6\textwidth}
 \begin{tikzpicture}[scale=0.8, every node/.style={scale=0.8}]
-\newcommand{\x}{3}
+\newcommand{\x}{1}
 \newcommand{\y}{-1.5}
 
-\tikzstyle{decision}=[circle,draw,thick,fill=blue!30,font=\scriptsize,anchor=base]
+\tikzstyle{inv} = [opacity=0]
+\tikzstyle{visible} = [opacity=1]
+
+\tikzstyle{textvisible} = [text opacity=1]
+
+\tikzstyle{decision}=[circle,draw,thick,fill=blue!30,font=\scriptsize,anchor=base, opacity=1]
+\tikzstyle{propagation}=[rectangle, minimum height=.65cm, minimum width=.65cm,draw,thick,fill=blue!15,font=\scriptsize,anchor=base]
 \tikzstyle{space}=[regular polygon, regular polygon sides=3, minimum height=1cm, anchor=base,xshift=-0.25cm,yshift=-0.25cm,
- draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
+draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 \tikzstyle{unsat}=[draw,thick,fill=red]
 \tikzstyle{link}=[->,>=latex,rounded corners=5pt,thick]
 \tikzstyle{trlink}=[link,nearly transparent]
 \tikzstyle{mid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=1,font=\scriptsize]
-\tikzstyle{trmid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=0.3,font=\scriptsize]
+\tikzstyle{invmid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=0.0,font=\scriptsize]
 
-	% layer 1
-    \node[decision](t) at (0,0) {$x_1$};
-    
-    % layer 2
-    \node[decision](l) at (-\x,\y) {$x_4$};
-   % \node[space](r) at (\x,\y) {};
-    
-    % layer 3
-    \node[decision](ll) at (-\x-\x*0.5,2*\y) {$x_7$};
-    \node[decision](lr) at (-\x+\x*0.5,2*\y) {$x_3$};
+% layer 1
+\node[decision](t) at (0,0) {$x_1$};
+
+% layer 2
+\node[decision, inv, onslide={<3-7>, visible}](l) at (-\x,\y) {$x_6$};
+
+\node[propagation, inv, onslide={<8>, visible}](l) at (-\x,\y) {$x_4$};
+% \node[space](r) at (\x,\y) {};
+
+% layer 3
+\node[decision, inv, onslide={<4-7>, visible}](ll) at (-\x-\x*0.5,2*\y) {$x_5$};
+%\node[decision](lr) at (-\x+\x*0.5,2*\y) {$x_3$};
 %    \node[decision](rl) at (\x-\x*0.5,2*\y) {$x_3$};
 %    \node[decision](rr) at (\x+\x*0.5,2*\y) {$x_3$};
-    
-	% layer 4
-    \node[decision](lll) at (-\x-\x*0.5-\x*0.25,3*\y) {$x_5$};
-    \node[decision](llr) at (-\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
-    \node[decision](lrl) at (-\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
-    \node[decision](lrr) at (-\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
+
+% layer 4
+\node[propagation, inv, onslide={<5-7>, visible}](lll) at (-\x-\x*0.5-\x*0.25,3*\y) {$x_4$};
+%\node[decision](llr) at (-\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
+%\node[decision](lrl) at (-\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
+%\node[decision](lrr) at (-\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
 %    \node[decision](rll) at (\x-\x*0.5-\x*0.25,3*\y) {$x_4$};
 %    \node[decision](rlr) at (\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
 %    \node[decision](rrl) at (\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
 %    \node[decision](rrr) at (\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
 
-	% layer 5
-    \node[unsat](llll) at (-\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
-    \node[unsat](lllr) at (-\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
-    \node[unsat](llrl) at (-\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
-	\node[unsat](llrr) at (-\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
-    \node[unsat](lrll) at (-\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {};
-    \node[unsat](lrlr) at (-\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
-    \node[unsat](lrrl) at (-\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
-    \node[unsat](lrrr) at (-\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
-    
+% layer 5
+%\node[unsat](llll) at (-\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+\node[propagation, inv, onslide={<6-7>, visible}](lllr) at (-\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {$x_2$};
+%\node[unsat](llrl) at (-\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](llrr) at (-\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
+%\node[unsat](lrll) at (-\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](lrlr) at (-\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%\node[unsat](lrrl) at (-\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](lrrr) at (-\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
+
 %    \node[unsat](rlll) at (\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
 %	\node[unsat](rllr) at (\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
 %	\node[unsat](rlrl) at (\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
@@ -463,34 +475,40 @@ $\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{\text{Clause with literals } x_1, x_
 %	\node[unsat](rrrl) at (\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
 %	\node[unsat](rrrr) at (\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
 
+\node[propagation, inv, onslide={<6-7>, visible}](lllrl) at (-\x-\x*0.5-\x*0.25,5*\y) {$x_3$};
 
-	\draw[link] (t) ->  node [mid] {$0$} (l);
+\node[scale=1.5, inv, onslide={<7-7>, visible}](lllrl) at (-\x-\x*0.5-\x*0.25,5*\y) {\ko};
+
+\draw[link, inv, onslide={<2->, visible}] (t) ->  node [invmid, onslide={<2->, textvisible}] {$0$} (l);
 %	\draw[link] (t) -> node [mid] {$1$} (r.north);
-	\draw[link] (l) ->  node [mid] {$0$} (ll);
-	\draw[link] (l) -> node [mid] {$1$} (lr);
+\draw[link, inv, onslide={<3-7>, visible}] (l) ->  node [invmid, onslide={<3-7>, textvisible}] {$0$} (ll);
+%\draw[link] (l) -> node [mid] {$1$} (lr);
 %	\draw[link] (r) ->  node [mid] {$0$} (rl);
 %	\draw[link] (r) -> node [mid] {$1$} (rr);
-	
-	\draw[link] (ll) -> node [mid] {$0$} (lll);
-	\draw[link] (ll) -> node [mid] {$1$} (llr);
-	\draw[link] (lr) -> node [mid] {$0$} (lrl);
-	\draw[link] (lr) -> node [mid] {$1$} (lrr);
-	
+
+\draw[link, inv, onslide={<4-7>, visible}] (ll) -> node [invmid, onslide={<4-7>, textvisible}] {$0$} (lll);
+%\draw[link] (ll) -> node [mid] {$1$} (llr);
+%\draw[link] (lr) -> node [mid] {$0$} (lrl);
+%\draw[link] (lr) -> node [mid] {$1$} (lrr);
+
 %	\draw[link] (rl) -> node [mid] {$0$} (rll);
 %	\draw[link] (rl) -> node [mid] {$1$} (rlr);
 %	\draw[link] (rr) -> node [mid] {$0$} (rrl);
 %	\draw[link] (rr) -> node [mid] {$1$} (rrr);
-	
-	
-	\draw[link] (lll) -> node [mid] {$0$} (llll);
-	\draw[link] (lll) -> node [mid] {$1$} (lllr);
-	\draw[link] (llr) -> node [mid] {$0$} (llrl);
-	\draw[link] (llr) -> node [mid] {$1$} (llrr);
-	\draw[link] (lrl) -> node [mid] {$0$} (lrll);
-	\draw[link] (lrl) -> node [mid] {$1$} (lrlr);
-	\draw[link] (lrr) -> node [mid] {$0$} (lrrl);
-	\draw[link] (lrr) -> node [mid] {$1$} (lrrr);
-	
+
+
+%\draw[link] (lll) -> node [mid] {$0$} (llll);
+\draw[link, inv, onslide={<5-7>, visible}] (lll) -> node [invmid, onslide={<5-7>, textvisible}] {$1$} (lllr);
+
+\draw[link, inv, onslide={<6-7>, visible}] (lllr) -> node [invmid, onslide={<6-7>, textvisible}] {$0$} (lllrl);
+
+%\draw[link] (llr) -> node [mid] {$0$} (llrl);
+%\draw[link] (llr) -> node [mid] {$1$} (llrr);
+%\draw[link] (lrl) -> node [mid] {$0$} (lrll);
+%\draw[link] (lrl) -> node [mid] {$1$} (lrlr);
+%\draw[link] (lrr) -> node [mid] {$0$} (lrrl);
+%\draw[link] (lrr) -> node [mid] {$1$} (lrrr);
+
 %	\draw[link] (rll) -> node [mid] {$0$} (rlll);
 %	\draw[link] (rll) -> node [mid] {$1$} (rllr);
 %	\draw[link] (rlr) -> node [mid] {$0$} (rlrl);
@@ -502,24 +520,180 @@ $\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{\text{Clause with literals } x_1, x_
 \end{tikzpicture}
 \end{column}
 \begin{column}[T]{.4\textwidth}
-	\scriptsize
-	\begin{itemize} 
-	\item[] $\omega_{1} = \{x_1  ,  x_2  ,  x_3\}$
-	\item[] $\omega_{2} = \{x_4  ,  x_5  ,  x_6\} $
-	\item[] $\omega_{3} = \{x_7  ,  x_8  ,  x_9\} $
-	\item[] $\omega_{4} = \{\neg x_1  ,  \neg x_4\} $
-	\item[] $\omega_{5} = \{\neg x_1  ,  \neg x_7\} $
-	\item[] $\omega_{6} = \{\neg x_4  ,  \neg x_7\} $
-	\item[] $\omega_{7} = \{\neg x_2  ,  \neg x_5\} $
-	\item[] $\omega_{8} = \{\neg x_2  ,  \neg x_8\} $
-	\item[] $\omega_{9} = \{\neg x_5  ,  \neg x_8\} $
-	\item[] $\omega_{10} = \{\neg x_3  ,  \neg x_6\} $
-	\item[] $\omega_{11} = \{\neg x_3  ,  \neg x_9\} $
-	\item[] $\omega_{12} = \{\neg x_6  ,  \neg x_9) $
-	\end{itemize}
+
+	\begin{tikzpicture}
+	\tikzstyle{tr}=[text width=3cm, opacity=0]
+	
+	\node[text width=3cm] (a) {
+		\smallskip
+		$\omega_1 = \{x_1, x_2, x_3\}$ 
+		\smallskip
+		$\omega_2 = \{x_4, x_5, x_6\}$
+		\smallskip
+		$\omega_3 = \{\neg x_1, \neg x_5\}$
+		\smallskip
+		$\omega_4 = \{\neg x_2, \neg x_4\}$
+		\smallskip
+		$\omega_5 = \{\neg x_3, \neg x_4\}$
+		\smallskip
+		$\omega_6 = \{\neg x_3, \neg x_6\}$
+	};
+	
+	\node[tr, onslide={<2>, opacity=1}] (a) {
+		\smallskip
+		$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		\smallskip
+		$\omega_2 = \{x_4, x_5, x_6\}$
+		\smallskip
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+		\smallskip
+		$\omega_4 = \{\neg x_2, \neg x_4\}$
+		\smallskip
+		$\omega_5 = \{\neg x_3, \neg x_4\}$
+		\smallskip
+		$\omega_6 = \{\neg x_3, \neg x_6\}$
+	};
+
+	\node[tr, onslide={<3>, opacity=1}] (a) {
+				\smallskip
+	$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+			\smallskip
+	$\omega_2 = \{x_4, x_5, \cred{x_6\}}$
+			\smallskip
+	$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+			\smallskip
+	$\omega_4 = \{\neg x_2, \neg x_4\}$
+			\smallskip
+	$\omega_5 = \{\neg x_3, \neg x_4\}$
+			\smallskip
+	$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+};
+
+
+	\node[tr, onslide={<4>, opacity=1}] (a) {
+					\smallskip
+	$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+				\smallskip
+	$\omega_2 = \{\cprop{x_4}, \cred{x_5}, \cred{x_6\}}$
+				\smallskip
+	$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+				\smallskip
+	$\omega_4 = \{\neg x_2, \neg x_4\}$
+				\smallskip
+	$\omega_5 = \{\neg x_3, \neg x_4\}$
+				\smallskip
+	$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+};
+
+
+	\node[tr, onslide={<5>, opacity=1}] (a) {
+						\smallskip
+	$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+					\smallskip
+	$\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+					\smallskip
+	$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+					\smallskip
+	$\omega_4 = \{\cprop{\neg x_2}, \cred{\neg x_4}\}$
+					\smallskip
+	$\omega_5 = \{\cprop{\neg x_3}, \cred{\neg x_4}\}$
+					\smallskip
+	$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+};
+
+	\node[tr, onslide={<6-7>, opacity=1}] (a) {
+						\smallskip
+	$\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
+					\smallskip
+	$\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+					\smallskip
+	$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+					\smallskip
+	$\cgreen{\omega_4} = \{\cgreen{\neg x_2}, \cred{\neg x_4}\}$
+					\smallskip
+	$\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
+					\smallskip
+	$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+};
+
+	\node[tr, onslide={<8->, opacity=1}] (a)  at (0, -3) {
+	$\omega_7 = \{x_1, \neg x_4\}$
+};
+
+
+	\end{tikzpicture}
+	
+%	\scriptsize
+%	\begin{itemize} 
+%	\item[] $\omega_{1} = \{x_1  ,  x_2  ,  x_3\}$
+%	\item[] $\omega_{2} = \{x_4  ,  x_5  ,  x_6\} $
+%	\item[] $\omega_{3} = \{x_7  ,  x_8  ,  x_9\} $
+%	\item[] $\omega_{4} = \{\neg x_1  ,  \neg x_4\} $
+%	\item[] $\omega_{5} = \{\neg x_1  ,  \neg x_7\} $
+%	\item[] $\omega_{6} = \{\neg x_4  ,  \neg x_7\} $
+%	\item[] $\omega_{7} = \{\neg x_2  ,  \neg x_5\} $
+%	\item[] $\omega_{8} = \{\neg x_2  ,  \neg x_8\} $
+%	\item[] $\omega_{9} = \{\neg x_5  ,  \neg x_8\} $
+%	\item[] $\omega_{10} = \{\neg x_3  ,  \neg x_6\} $
+%	\item[] $\omega_{11} = \{\neg x_3  ,  \neg x_9\} $
+%	\item[] $\omega_{12} = \{\neg x_6  ,  \neg x_9) $
+%	\end{itemize}
 	\end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}
+	\begin{tikzpicture}[every node/.style={scale=0.59}, scale=0.59]
+	\node[text width=3cm] (a) {
+		$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		$\omega_2 = \{x_4, x_5, x_6\}$
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+		$\omega_4 = \{\neg x_2, \neg x_4\}$
+		$\omega_5 = \{\neg x_3, \neg x_4\}$
+		$\omega_6 = \{\neg x_3, \neg x_6\}$
+	};
+
+	\node[text width=3cm] (b) at ($(a) + (3.5, 0)$) {
+		$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		$\omega_2 = \{x_4, x_5, \cred{x_6\}}$
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+		$\omega_4 = \{\neg x_2, \neg x_4\}$
+		$\omega_5 = \{\neg x_3, \neg x_4\}$
+		$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+
+	
+	\node[text width=3cm] (c) at ($(b) + (3.5, 0)$) {
+		$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		$\omega_2 = \{\cprop{x_4}, \cred{x_5}, \cred{x_6\}}$
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		$\omega_4 = \{\neg x_2, \neg x_4\}$
+		$\omega_5 = \{\neg x_3, \neg x_4\}$
+		$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+
+	
+	\node[text width=3cm] (d) at ($(c) + (3.5, 0)$) {
+		$\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		$\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		$\omega_4 = \{\cprop{\neg x_2}, \cred{\neg x_4}\}$
+		$\omega_5 = \{\cprop{\neg x_3}, \cred{\neg x_4}\}$
+		$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+
+
+	\node[text width=3cm] (e) at ($(d) + (3.5, 0)$) {
+		$\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
+		$\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+		$\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		$\cgreen{\omega_4} = \{\cgreen{\neg x_2}, \cred{\neg x_4}\}$
+		$\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
+		$\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+	\end{tikzpicture}
+\end{frame}
+
 %% ----------------------------------------------------------------------------
 
 \begin{frame}
@@ -1206,3 +1380,200 @@ Perspectives:
 %\end{tikzpicture}
 
 \end{document}
+
+
+% TODO REMOVE
+%\begin{tikzpicture}[scale=0.8, every node/.style={scale=0.8}]
+%\newcommand{\x}{3}
+%\newcommand{\y}{-1.5}
+%
+%\tikzstyle{decision}=[circle,draw,thick,fill=blue!30,font=\scriptsize,anchor=base]
+%\tikzstyle{conflict}=[regular polygon,regular polygon sides=3,minimum height=1cm, anchor=base,xshift=-0.25cm,yshift=-0.25cm,draw,thick,fill=blue!5]
+%
+%\tikzstyle{propagation}=[rectangle, minimum height=.65cm, minimum width=.65cm,draw,thick,fill=blue!15,font=\scriptsize,anchor=base]
+%\tikzstyle{space}=[regular polygon, regular polygon sides=3, minimum height=1cm, anchor=base,xshift=-0.25cm,yshift=-0.25cm,
+% draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
+%\tikzstyle{unsat}=[draw,thick,fill=red]
+%\tikzstyle{link}=[->,>=latex,rounded corners=5pt,thick]
+%\tikzstyle{trlink}=[link,nearly transparent]
+%\tikzstyle{mid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=1,font=\scriptsize]
+%\tikzstyle{trmid}=[midway,fill=white,opacity=1, text opacity=0,font=\scriptsize]
+%
+%	% layer 1
+%    \node[decision](t) at (0,0) {$x_1$};
+%    
+%    % layer 2
+%    \node[decision, opacity=0, onslide={<2-8>, opacity=1}](l) at (-\x,\y) {$x_6$};
+%    
+%%    \node[decision, opacity=0, onslide={<10>, opacity=1}](l) at (-\x,\y) {$x_4$};
+%   % \node[space](r) at (\x,\y) {};
+%    
+%    % layer 3
+%    \node[propagation](ll) at (-\x-\x*0.5,2*\y) {$x_8$};
+%    \node[propagation](lr) at (-\x-\x*0.5,2*\y) {$x_4$};
+%%    \node[decision](rl) at (\x-\x*0.5,2*\y) {$x_3$};
+%%    \node[decision](rr) at (\x+\x*0.5,2*\y) {$x_3$};
+%    
+%	% layer 4
+%%    \node[decision](lll) at (-\x-\x*0.5-\x*0.25,3*\y) {$x_5$};
+%%    \node[decision](llr) at (-\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
+%    \node[propagation](lrl) at (-\x+\x*0.5-\x*0.25,3*\y) {$x_2$};
+%%    \node[decision](lrr) at (-\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rll) at (\x-\x*0.5-\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rlr) at (\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rrl) at (\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rrr) at (\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
+%
+%	% layer 5
+%%    \node[unsat](llll) at (-\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%%    \node[unsat](lllr) at (-\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%    \node[unsat](llrl) at (-\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](llrr) at (-\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
+%    \node[propagation](lrll) at (-\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {$x_3$};
+%    \node[scale=1.5](lrll) at (-\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {\ko};
+%%    \node[unsat](lrlr) at (-\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%    \node[unsat](lrrl) at (-\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%    \node[unsat](lrrr) at (-\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
+%    
+%%    \node[unsat](rlll) at (\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rllr) at (\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rlrl) at (\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rlrr) at (\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rrll) at (\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rrlr) at (\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rrrl) at (\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rrrr) at (\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
+%
+%
+%	\draw[link,opacity=0, onslide={<2->, opacity=1}] (t) ->  node [trmid,onslide={<2->, text opacity=1}] {$0$} (l);
+%%	\draw[link] (t) -> node [mid] {$1$} (r.north);
+%%	\draw[link] (l) ->  node [mid] {$0$} (ll);
+%	\draw[link] (l) -> node [mid] {$1$} (lr);
+%%	\draw[link] (r) ->  node [mid] {$0$} (rl);
+%%	\draw[link] (r) -> node [mid] {$1$} (rr);
+%	
+%%	\draw[link] (ll) -> node [mid] {$0$} (lll);
+%%	\draw[link] (ll) -> node [mid] {$1$} (llr);
+%	\draw[link] (lr) -> node [mid] {$0$} (lrl);
+%%	\draw[link] (lr) -> node [mid] {$1$} (lrr);
+%	
+%%	\draw[link] (rl) -> node [mid] {$0$} (rll);
+%%	\draw[link] (rl) -> node [mid] {$1$} (rlr);
+%%	\draw[link] (rr) -> node [mid] {$0$} (rrl);
+%%	\draw[link] (rr) -> node [mid] {$1$} (rrr);
+%	
+%	
+%%	\draw[link] (lll) -> node [mid] {$0$} (llll);
+%%	\draw[link] (lll) -> node [mid] {$1$} (lllr);
+%%	\draw[link] (llr) -> node [mid] {$0$} (llrl);
+%%	\draw[link] (llr) -> node [mid] {$1$} (llrr);
+%	\draw[link] (lrl) -> node [mid] {$0$} (lrll);
+%%	\draw[link] (lrl) -> node [mid] {$1$} (lrlr);
+%%	\draw[link] (lrr) -> node [mid] {$0$} (lrrl);
+%%	\draw[link] (lrr) -> node [mid] {$1$} (lrrr);
+%	
+%%	\draw[link] (rll) -> node [mid] {$0$} (rlll);
+%%	\draw[link] (rll) -> node [mid] {$1$} (rllr);
+%%	\draw[link] (rlr) -> node [mid] {$0$} (rlrl);
+%%	\draw[link] (rlr) -> node [mid] {$1$} (rlrr);
+%%	\draw[link] (rrl) -> node [mid] {$0$} (rrll);
+%%	\draw[link] (rrl) -> node [mid] {$1$} (rrlr);
+%%	\draw[link] (rrr) -> node [mid] {$0$} (rrrl);
+%%	\draw[link] (rrr) -> node [mid] {$1$} (rrrr);
+%\end{tikzpicture}
+
+
+
+
+%\begin{tikzpicture}[scale=0.8, every node/.style={scale=0.8}]
+%\newcommand{\x}{3}
+%\newcommand{\y}{-1.5}
+%
+%\tikzstyle{decision}=[circle,draw,thick,fill=blue!30,font=\scriptsize,anchor=base]
+%\tikzstyle{space}=[regular polygon, regular polygon sides=3, minimum height=1cm, anchor=base,xshift=-0.25cm,yshift=-0.25cm,
+%draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
+%\tikzstyle{unsat}=[draw,thick,fill=red]
+%\tikzstyle{link}=[->,>=latex,rounded corners=5pt,thick]
+%\tikzstyle{trlink}=[link,nearly transparent]
+%\tikzstyle{mid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=1,font=\scriptsize]
+%\tikzstyle{trmid}=[midway,fill=white,nearly transparent,opacity=1, text opacity=0.3,font=\scriptsize]
+%
+%% layer 1
+%\node[decision](t) at (0,0) {$x_1$};
+%
+%% layer 2
+%\node[decision](l) at (-\x,\y) {$x_4$};
+%% \node[space](r) at (\x,\y) {};
+%
+%% layer 3
+%\node[decision](ll) at (-\x-\x*0.5,2*\y) {$x_7$};
+%\node[decision](lr) at (-\x+\x*0.5,2*\y) {$x_3$};
+%%    \node[decision](rl) at (\x-\x*0.5,2*\y) {$x_3$};
+%%    \node[decision](rr) at (\x+\x*0.5,2*\y) {$x_3$};
+%
+%% layer 4
+%\node[decision](lll) at (-\x-\x*0.5-\x*0.25,3*\y) {$x_5$};
+%\node[decision](llr) at (-\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
+%\node[decision](lrl) at (-\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
+%\node[decision](lrr) at (-\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rll) at (\x-\x*0.5-\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rlr) at (\x-\x*0.5+\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rrl) at (\x+\x*0.5-\x*0.25,3*\y) {$x_4$};
+%%    \node[decision](rrr) at (\x+\x*0.5+\x*0.25,3*\y) {$x_4$};
+%
+%% layer 5
+%\node[unsat](llll) at (-\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](lllr) at (-\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%\node[unsat](llrl) at (-\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](llrr) at (-\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
+%\node[unsat](lrll) at (-\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](lrlr) at (-\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%\node[unsat](lrrl) at (-\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%\node[unsat](lrrr) at (-\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
+%
+%%    \node[unsat](rlll) at (\x-\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rllr) at (\x-\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rlrl) at (\x-\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rlrr) at (\x-\x*0.5+\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rrll) at (\x+\x*0.5-\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rrlr) at (\x+\x*0.5-\x*0.25+\x*0.125,4*\y) {};
+%%	\node[unsat](rrrl) at (\x+\x*0.5+\x*0.25-\x*0.125,4*\y) {};
+%%	\node[unsat](rrrr) at (\x+\x*0.5+\x*0.25+\x*0.125,4*\y) {}; 
+%
+%
+%\draw[link] (t) ->  node [mid] {$0$} (l);
+%%	\draw[link] (t) -> node [mid] {$1$} (r.north);
+%\draw[link] (l) ->  node [mid] {$0$} (ll);
+%\draw[link] (l) -> node [mid] {$1$} (lr);
+%%	\draw[link] (r) ->  node [mid] {$0$} (rl);
+%%	\draw[link] (r) -> node [mid] {$1$} (rr);
+%
+%\draw[link] (ll) -> node [mid] {$0$} (lll);
+%\draw[link] (ll) -> node [mid] {$1$} (llr);
+%\draw[link] (lr) -> node [mid] {$0$} (lrl);
+%\draw[link] (lr) -> node [mid] {$1$} (lrr);
+%
+%%	\draw[link] (rl) -> node [mid] {$0$} (rll);
+%%	\draw[link] (rl) -> node [mid] {$1$} (rlr);
+%%	\draw[link] (rr) -> node [mid] {$0$} (rrl);
+%%	\draw[link] (rr) -> node [mid] {$1$} (rrr);
+%
+%
+%\draw[link] (lll) -> node [mid] {$0$} (llll);
+%\draw[link] (lll) -> node [mid] {$1$} (lllr);
+%\draw[link] (llr) -> node [mid] {$0$} (llrl);
+%\draw[link] (llr) -> node [mid] {$1$} (llrr);
+%\draw[link] (lrl) -> node [mid] {$0$} (lrll);
+%\draw[link] (lrl) -> node [mid] {$1$} (lrlr);
+%\draw[link] (lrr) -> node [mid] {$0$} (lrrl);
+%\draw[link] (lrr) -> node [mid] {$1$} (lrrr);
+%
+%%	\draw[link] (rll) -> node [mid] {$0$} (rlll);
+%%	\draw[link] (rll) -> node [mid] {$1$} (rllr);
+%%	\draw[link] (rlr) -> node [mid] {$0$} (rlrl);
+%%	\draw[link] (rlr) -> node [mid] {$1$} (rlrr);
+%%	\draw[link] (rrl) -> node [mid] {$0$} (rrll);
+%%	\draw[link] (rrl) -> node [mid] {$1$} (rrlr);
+%%	\draw[link] (rrr) -> node [mid] {$0$} (rrrl);
+%%	\draw[link] (rrr) -> node [mid] {$1$} (rrrr);
+%\end{tikzpicture}
